src/grammar/MPGrammarParser.java
// Generated from /home/anthony/IdeaProjects/MiniPython2/MPGrammar.g4 by ANTLR 4.7
package grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MPGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PIZQ=1, PDER=2, CIZQ=3, CDER=4, DPUNTOS=5, COMA=6, ASSIGN=7, SUMA=8, RESTA=9, 
		MUL=10, DIV=11, DIV_ENT=12, POT=13, MENOR_QUE=14, MAYOR_QUE=15, MENOR_QUE_IG=16, 
		MAYOR_QUE_IG=17, IGUAL=18, DEF=19, IF=20, ELSE=21, WHILE=22, RETURN=23, 
		PRINT=24, LEN=25, COMMENT=26, MULTILINE_COMMENT=27, WS=28, IDENTIFIER=29, 
		INTEGER=30, STRING=31, CHAR=32, NEWLINE=33, INDENT=34, DEDENT=35;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_defStatement = 2, RULE_argList = 3, 
		RULE_moreArgs = 4, RULE_ifStatement = 5, RULE_whileStatement = 6, RULE_returnStatement = 7, 
		RULE_printStatement = 8, RULE_assignStatement = 9, RULE_functionCallStatement = 10, 
		RULE_sequence = 11, RULE_moreStatement = 12, RULE_expression = 13, RULE_comparison = 14, 
		RULE_additionExpression = 15, RULE_additionFactor = 16, RULE_multiplicationExpression = 17, 
		RULE_multiplicationFactor = 18, RULE_elementExpression = 19, RULE_elementAccess = 20, 
		RULE_functionCallExpression = 21, RULE_expressionList = 22, RULE_moreExpressions = 23, 
		RULE_primitiveExpression = 24, RULE_listExpression = 25;
	public static final String[] ruleNames = {
		"program", "statement", "defStatement", "argList", "moreArgs", "ifStatement", 
		"whileStatement", "returnStatement", "printStatement", "assignStatement", 
		"functionCallStatement", "sequence", "moreStatement", "expression", "comparison", 
		"additionExpression", "additionFactor", "multiplicationExpression", "multiplicationFactor", 
		"elementExpression", "elementAccess", "functionCallExpression", "expressionList", 
		"moreExpressions", "primitiveExpression", "listExpression"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "'['", "']'", "':'", "','", "'='", "'+'", "'-'", "'*'", 
		"'/'", "'//'", "'**'", "'<'", "'>'", "'<='", "'>='", "'=='", "'def'", 
		"'if'", "'else'", "'while'", "'return'", "'print'", "'len'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "PIZQ", "PDER", "CIZQ", "CDER", "DPUNTOS", "COMA", "ASSIGN", "SUMA", 
		"RESTA", "MUL", "DIV", "DIV_ENT", "POT", "MENOR_QUE", "MAYOR_QUE", "MENOR_QUE_IG", 
		"MAYOR_QUE_IG", "IGUAL", "DEF", "IF", "ELSE", "WHILE", "RETURN", "PRINT", 
		"LEN", "COMMENT", "MULTILINE_COMMENT", "WS", "IDENTIFIER", "INTEGER", 
		"STRING", "CHAR", "NEWLINE", "INDENT", "DEDENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MPGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MPGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ProgramNContext extends ProgramContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode EOF() { return getToken(MPGrammarParser.EOF, 0); }
		public ProgramNContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MPGrammarVisitor ) return ((MPGrammarVisitor<? extends T>)visitor).visitProgramN(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			_localctx = new ProgramNContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			statement();
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PIZQ) | (1L << CIZQ) | (1L << DEF) | (1L << IF) | (1L << WHILE) | (1L << RETURN) | (1L << PRINT) | (1L << LEN) | (1L << IDENTIFIER) | (1L << INTEGER) | (1L << STRING) | (1L << CHAR))) != 0)) {
				{
				{
				setState(53);
				statement();
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(59);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StatretContext extends StatementContext {
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public StatretContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MPGrammarVisitor ) return ((MPGrammarVisitor<? extends T>)visitor).visitStatret(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatfncallContext extends StatementContext {
		public FunctionCallStatementContext functionCallStatement() {
			return getRuleContext(FunctionCallStatementContext.class,0);
		}
		public StatfncallContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MPGrammarVisitor ) return ((MPGrammarVisitor<? extends T>)visitor).visitStatfncall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatassignContext extends StatementContext {
		public AssignStatementContext assignStatement() {
			return getRuleContext(AssignStatementContext.class,0);
		}
		public StatassignContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MPGrammarVisitor ) return ((MPGrammarVisitor<? extends T>)visitor).visitStatassign(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatdefContext extends StatementContext {
		public DefStatementContext defStatement() {
			return getRuleContext(DefStatementContext.class,0);
		}
		public StatdefContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MPGrammarVisitor ) return ((MPGrammarVisitor<? extends T>)visitor).visitStatdef(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatifContext extends StatementContext {
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public StatifContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MPGrammarVisitor ) return ((MPGrammarVisitor<? extends T>)visitor).visitStatif(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatprintContext extends StatementContext {
		public PrintStatementContext printStatement() {
			return getRuleContext(PrintStatementContext.class,0);
		}
		public StatprintContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MPGrammarVisitor ) return ((MPGrammarVisitor<? extends T>)visitor).visitStatprint(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatwhileContext extends StatementContext {
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public StatwhileContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MPGrammarVisitor ) return ((MPGrammarVisitor<? extends T>)visitor).visitStatwhile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(68);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new StatdefContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				defStatement();
				}
				break;
			case 2:
				_localctx = new StatifContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				ifStatement();
				}
				break;
			case 3:
				_localctx = new StatretContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(63);
				returnStatement();
				}
				break;
			case 4:
				_localctx = new StatprintContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(64);
				printStatement();
				}
				break;
			case 5:
				_localctx = new StatwhileContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(65);
				whileStatement();
				}
				break;
			case 6:
				_localctx = new StatassignContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(66);
				assignStatement();
				}
				break;
			case 7:
				_localctx = new StatfncallContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(67);
				functionCallStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefStatementContext extends ParserRuleContext {
		public DefStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defStatement; }
	 
		public DefStatementContext() { }
		public void copyFrom(DefStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DefstatContext extends DefStatementContext {
		public TerminalNode DEF() { return getToken(MPGrammarParser.DEF, 0); }
		public TerminalNode IDENTIFIER() { return getToken(MPGrammarParser.IDENTIFIER, 0); }
		public TerminalNode PIZQ() { return getToken(MPGrammarParser.PIZQ, 0); }
		public ArgListContext argList() {
			return getRuleContext(ArgListContext.class,0);
		}
		public TerminalNode PDER() { return getToken(MPGrammarParser.PDER, 0); }
		public TerminalNode DPUNTOS() { return getToken(MPGrammarParser.DPUNTOS, 0); }
		public SequenceContext sequence() {
			return getRuleContext(SequenceContext.class,0);
		}
		public DefstatContext(DefStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MPGrammarVisitor ) return ((MPGrammarVisitor<? extends T>)visitor).visitDefstat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefStatementContext defStatement() throws RecognitionException {
		DefStatementContext _localctx = new DefStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_defStatement);
		try {
			_localctx = new DefstatContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(DEF);
			setState(71);
			match(IDENTIFIER);
			setState(72);
			match(PIZQ);
			setState(73);
			argList();
			setState(74);
			match(PDER);
			setState(75);
			match(DPUNTOS);
			setState(76);
			sequence();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgListContext extends ParserRuleContext {
		public ArgListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argList; }
	 
		public ArgListContext() { }
		public void copyFrom(ArgListContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MorearglistContext extends ArgListContext {
		public TerminalNode IDENTIFIER() { return getToken(MPGrammarParser.IDENTIFIER, 0); }
		public MoreArgsContext moreArgs() {
			return getRuleContext(MoreArgsContext.class,0);
		}
		public MorearglistContext(ArgListContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MPGrammarVisitor ) return ((MPGrammarVisitor<? extends T>)visitor).visitMorearglist(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EpsarglistContext extends ArgListContext {
		public EpsarglistContext(ArgListContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MPGrammarVisitor ) return ((MPGrammarVisitor<? extends T>)visitor).visitEpsarglist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgListContext argList() throws RecognitionException {
		ArgListContext _localctx = new ArgListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_argList);
		try {
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				_localctx = new MorearglistContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				match(IDENTIFIER);
				setState(79);
				moreArgs();
				}
				break;
			case PDER:
				_localctx = new EpsarglistContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoreArgsContext extends ParserRuleContext {
		public MoreArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moreArgs; }
	 
		public MoreArgsContext() { }
		public void copyFrom(MoreArgsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MoreargsNContext extends MoreArgsContext {
		public List<TerminalNode> COMA() { return getTokens(MPGrammarParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(MPGrammarParser.COMA, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(MPGrammarParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(MPGrammarParser.IDENTIFIER, i);
		}
		public MoreargsNContext(MoreArgsContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MPGrammarVisitor ) return ((MPGrammarVisitor<? extends T>)visitor).visitMoreargsN(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MoreArgsContext moreArgs() throws RecognitionException {
		MoreArgsContext _localctx = new MoreArgsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_moreArgs);
		int _la;
		try {
			_localctx = new MoreargsNContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(83);
				match(COMA);
				setState(84);
				match(IDENTIFIER);
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatementContext extends ParserRuleContext {
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
	 
		public IfStatementContext() { }
		public void copyFrom(IfStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IfstatContext extends IfStatementContext {
		public TerminalNode IF() { return getToken(MPGrammarParser.IF, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<TerminalNode> DPUNTOS() { return getTokens(MPGrammarParser.DPUNTOS); }
		public TerminalNode DPUNTOS(int i) {
			return getToken(MPGrammarParser.DPUNTOS, i);
		}
		public List<SequenceContext> sequence() {
			return getRuleContexts(SequenceContext.class);
		}
		public SequenceContext sequence(int i) {
			return getRuleContext(SequenceContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(MPGrammarParser.ELSE, 0); }
		public IfstatContext(IfStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MPGrammarVisitor ) return ((MPGrammarVisitor<? extends T>)visitor).visitIfstat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ifStatement);
		try {
			_localctx = new IfstatContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(IF);
			setState(91);
			expression();
			setState(92);
			match(DPUNTOS);
			setState(93);
			sequence();
			setState(94);
			match(ELSE);
			setState(95);
			match(DPUNTOS);
			setState(96);
			sequence();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileStatementContext extends ParserRuleContext {
		public WhileStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileStatement; }
	 
		public WhileStatementContext() { }
		public void copyFrom(WhileStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class WhilestatContext extends WhileStatementContext {
		public TerminalNode WHILE() { return getToken(MPGrammarParser.WHILE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode DPUNTOS() { return getToken(MPGrammarParser.DPUNTOS, 0); }
		public SequenceContext sequence() {
			return getRuleContext(SequenceContext.class,0);
		}
		public WhilestatContext(WhileStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MPGrammarVisitor ) return ((MPGrammarVisitor<? extends T>)visitor).visitWhilestat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhileStatementContext whileStatement() throws RecognitionException {
		WhileStatementContext _localctx = new WhileStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_whileStatement);
		try {
			_localctx = new WhilestatContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(WHILE);
			setState(99);
			expression();
			setState(100);
			match(DPUNTOS);
			setState(101);
			sequence();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnStatementContext extends ParserRuleContext {
		public ReturnStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStatement; }
	 
		public ReturnStatementContext() { }
		public void copyFrom(ReturnStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ReturnstatContext extends ReturnStatementContext {
		public TerminalNode RETURN() { return getToken(MPGrammarParser.RETURN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(MPGrammarParser.NEWLINE, 0); }
		public ReturnstatContext(ReturnStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MPGrammarVisitor ) return ((MPGrammarVisitor<? extends T>)visitor).visitReturnstat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnStatementContext returnStatement() throws RecognitionException {
		ReturnStatementContext _localctx = new ReturnStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_returnStatement);
		try {
			_localctx = new ReturnstatContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(RETURN);
			setState(104);
			expression();
			setState(105);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintStatementContext extends ParserRuleContext {
		public PrintStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printStatement; }
	 
		public PrintStatementContext() { }
		public void copyFrom(PrintStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PrintstatContext extends PrintStatementContext {
		public TerminalNode PRINT() { return getToken(MPGrammarParser.PRINT, 0); }
		public TerminalNode PIZQ() { return getToken(MPGrammarParser.PIZQ, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PDER() { return getToken(MPGrammarParser.PDER, 0); }
		public TerminalNode NEWLINE() { return getToken(MPGrammarParser.NEWLINE, 0); }
		public PrintstatContext(PrintStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MPGrammarVisitor ) return ((MPGrammarVisitor<? extends T>)visitor).visitPrintstat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintStatementContext printStatement() throws RecognitionException {
		PrintStatementContext _localctx = new PrintStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_printStatement);
		try {
			_localctx = new PrintstatContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(PRINT);
			setState(108);
			match(PIZQ);
			setState(109);
			expression();
			setState(110);
			match(PDER);
			setState(111);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignStatementContext extends ParserRuleContext {
		public AssignStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignStatement; }
	 
		public AssignStatementContext() { }
		public void copyFrom(AssignStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AssignstatContext extends AssignStatementContext {
		public TerminalNode IDENTIFIER() { return getToken(MPGrammarParser.IDENTIFIER, 0); }
		public TerminalNode ASSIGN() { return getToken(MPGrammarParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(MPGrammarParser.NEWLINE, 0); }
		public AssignstatContext(AssignStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MPGrammarVisitor ) return ((MPGrammarVisitor<? extends T>)visitor).visitAssignstat(this);
			else return visitor.visitChildren(this);
		}
	}
